# SocketStudies

./: .gitignore  CMakeLists.txt  main.cpp
BookRecipes/: Common.h  Recipe1.cpp  Recipe1.h  Recipe10.cpp  Recipe10.h  Recipe11.cpp  Recipe11.h  Recipe12.cpp  Recipe12.h  Recipe13.cpp  Recipe13.h  Recipe14.cpp  Recipe14.h  Recipe15.cpp  Recipe15.h  Recipe2.cpp  Recipe2.h  Recipe3.cpp  Recipe3.h  Recipe4.cpp  Recipe4.h  Recipe5.cpp  Recipe5.h  Recipe6.cpp  Recipe6.h  Recipe8.cpp  Recipe8.h  Recipe9.cpp  Recipe9.h  Tests.cpp  Tests.h
OLC_Playlist/: BasicIntroduction.cpp  BasicIntroduction.h
SocketServer/: CMakeLists.txt  main.cpp
SocketServer/BookServers/: AsyncHandShake.cpp  AsyncHandShake.h  Common.h  PageServer.cpp  PageServer.h  PingPongCloseTests.cpp  PingPongCloseTests.h  Recipe15.cpp  Recipe15.h  ServerBeast_1.cpp  ServerBeast_1.h  ServerTests.cpp  ServerTests.h
SocketServer/BookServers/ServersBeast/: Client.cpp  Client.h  Doorman.cpp  Doorman.h  HttpListener.cpp  HttpListener.h  Server.cpp  Server.h  ServerState.cpp  ServerState.h  WebsocketConnection.cpp  WebsocketConnection.h
SocketServer/BookServers/ServersBeast/Template/: ServerBeastTemplate.cpp.template  ServerBeastTemplate.h.template
SocketServer/GetRichVideo/: GRCommon.h  GR_ChatServer.cpp  GR_ChatServer.h  HttpSession.cpp  HttpSession.h  Listener.cpp  Listener.h  SharedState.cpp  SharedState.h  WebsocketSession.cpp  WebsocketSession.h
SocketServer/GetRichVideo/CLIENT_WEB/: index.html
SocketServer/GetRichVideo/CLIENT_WEB/scripts/: bikehills.js
